No Internet Zone Project Initialization

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,68 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-asgiref==3.6.0
-async-timeout==4.0.2
-attrs==22.2.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-Django==4.1.7
-django-crispy-forms==2.0
-frozenlist==1.3.3
-idna==3.4
-multidict==6.0.4
-openai==0.27.2
-python-dotenv==1.0.0
-requests==2.28.2
-sqlparse==0.4.3
-tqdm==4.65.0
-urllib3==1.26.15
-yarl==1.8.2
+absl-py==2.1.0
+asgiref==3.7.2
+astunparse==1.6.3
+attrs==23.1.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+Django==5.0
+django-cors-headers==4.3.1
+django-multiselectfield==0.1.12
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+drf-extra-fields==3.7.0
+drf-spectacular==0.27.0
+filetype==1.2.0
+flatbuffers==24.3.25
+gast==0.5.4
+google-pasta==0.2.0
+grpcio==1.62.1
+gunicorn==21.2.0
+h5py==3.10.0
+idna==3.6
+inflection==0.5.1
+joblib==1.3.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+keras==3.1.1
+libclang==18.1.1
+Markdown==3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+ml-dtypes==0.3.2
+namex==0.0.7
+nested-multipart-parser==1.5.0
+numpy==1.26.3
+opt-einsum==3.3.0
+optree==0.11.0
+packaging==23.2
+pandas==2.2.0
+pillow==10.2.0
+protobuf==4.21.12
+psycopg2-binary==2.9.9
+Pygments==2.17.2
+PyJWT==2.8.0
+python-dateutil==2.8.2
+python-decouple==3.8
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.0
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.13.2
+scikit-learn==1.4.1.post1
+scipy==1.13.0
+six==1.16.0
+sqlparse==0.4.4
+tensorboard==2.16.2
+tensorboard-data-server==0.7.2
+tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.36.0
+termcolor==2.4.0
+threadpoolctl==3.4.0
+typing_extensions==4.10.0
+tzdata==2023.3
+uritemplate==4.1.1
+urllib3==2.2.1
+Werkzeug==3.0.2
+wrapt==1.16.0
